# snowflake-mcp-server

./: .env.browser.example  .env.example  .env.private_key.example  LICENSE  README.md  bootstrap.sh  env.browser.example  env.private_key.example  pyproject.toml  requirements.txt
mcp_server_snowflake/: main.py
mcp_server_snowflake/utils/: snowflake_conn.py  template.py
reports.codexhub.ai/: bandit_report.html  bandit_report.txt  dependency_check.txt  security_analysis.md  semgrep_owasp.json  semgrep_security.json  semgrep_sql_injection.json
snowflake_mcp_server/: __init__.py  main.py
snowflake_mcp_server/utils/: snowflake_conn.py
tests/: test_snowflake_conn.py
